<resources>
    <string name="app_name" translatable="false">Icurier</string>
    <string name="token" translatable="false">android</string>
    <string name="nointernet" translatable="false">No internet connection!!!</string>
    <string name="default_notification_channel_id" translatable="false">my_channel_01</string>
    <string name="facebook_app_id" translatable="false">719805391767637</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb719805391767637</string>
    <string name="url" translatable="false"><u>www.icurier.vip</u></string>
    <string name="Email" translatable="false"><u>soporte@icurier.vip</u></string>
    <string name="google_place_api_key" translatable="false">AIzaSyC5DbH_CzCL3EklCBT0uWaII-XmGV0dJ7w</string>
    <string name="screen_txt1" translatable="false">If you buy...GANANS</string>
    <string name="screen_txt2" translatable="false">If you travels...GANANS</string>
    <string name="GANANS" translatable="false">GANANS!</string>
    <string name="screen_txt3" translatable="false">todosganan.com</string>
    <string name="forgot_pass" translatable="false">Forgot Password?</string>
    <string name="username">Username*</string>
    <string name="countary">Country*</string>
    <string name="telephone">Telephone*</string>
    <string name="sign_up__">Sign Up</string>
    <string name="email">Email*</string>
    <string name="have_ac">Already have an Account? Sign In</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="edit_pprofile">Update Profile</string>
    <string name="ratings" translatable="false">Ratings</string>
    <string name="telephoned">Telephone:</string>
    <string name="email_pattern" translatable="false">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="link_pattern" translatable="false">[www]+.[a-z]+\\.+[a-z]+</string>
    <string name="origin" >Origin :</string>
    <string name="destination">Destination :</string>
    <string name="txt_travel_from_city">Travelling From city:</string>
    <string name="txt_trip_to_city">Trip to city (where i will deliver my orders):</string>
    <string name="hint_city">New York, USA</string>
    <string name="des_city">London,Uk</string>
    <string name="travel_day">I travel the day:</string>
    <string name="hint_day" translatable="false">10/03/2019</string>
    <string name="add_trip">Add trip</string>
    <string name="plan_new_trip">Plan new trip and find out everything you can bring!</string>
    <string name="error_email" translatable="false">Please Enter Email</string>
    <string name="error_user_name" translatable="false">Please User Name</string>
    <string name="error_pass" translatable="false">Please Enter Password</string>
    <string name="error_valid_email" translatable="false">Please Enter Valid Email</string>
    <string name="error_country" translatable="false">Please Enter Country</string>
    <string name="error_telephone" translatable="false">Please Enter Mobile Number</string>
    <string name="error_password" translatable="false">Please Password</string>
    <string name="error_con_password" translatable="false">Password And Confirm Password Must Be Same</string>
    <string name="add_trip_c" translatable="false">ADD TRIP</string>
    <string name="conf" >Language</string>
    <string name="support">Support</string>
    <string name="blog" >Blog</string>
    <string name="faq" >FAQs</string>
    <string name="contact">Contact</string>
    <string name="privacy" >Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="personal_details" translatable="false">Personal Details</string>
    <string name="travel_details" translatable="false">Travel Details</string>
    <string name="offer_to_manage" translatable="false"> Offers to manage</string>
    <string name="purchase_to_made" translatable="false">Purchase made</string>
    <string name="order_del" translatable="false">Order delivered</string>
    <string name="satisfied_buyer" translatable="false"> Satisfied buyer</string>
    <string name="order_to_manage">Order to manage</string>
    <string name="purchase_made">Purchase made</string>
    <string name="order_deliverd" >Order Delivered</string>
    <string name="statisfied_buyer">Satisfied\nbuyer</string>
    <string name="product_receive">Person Who Receives(Name):</string>
    <string name="document_number">Document number (Passport):</string>
    <string name="done" translatable="false">Done</string>
    <string name="forget_password" translatable="false">Forgot Password</string>
    <string name="please_wait" translatable="false">Please Wait...</string>
    <string name="err_enter_old_pass" translatable="false">Enter Old Password</string>
    <string name="enter_article_name" translatable="false">Enter Article Name</string>
    <string name="enter_max_article_name" translatable="false">Article Name Length should be less than 499.</string>
    <string name="article_comment" translatable="false">Enter Article Comment</string>
    <string name="article_max_length_comment" translatable="false">Article Name Length should be less than 999.</string>
    <string name="product_link_max_length_comment" translatable="false">Product Link Length should be less than 499.</string>
    <string name="enter_product_link" translatable="false">Enter Valid Product Link</string>
    <string name="enter_product_price" translatable="false">Enter Product Price</string>
    <string name="select_qut" translatable="false">Select Quentity</string>
    <string name="select_country" translatable="false">Select Country</string>
    <string name="enter_reward" translatable="false">Enter Reward</string>
    <string name="internate_error" translatable="false">Please Check your Internate Connection</string>
    <string name="name_of_account_holder" translatable="false">Name Of Account Holder</string>
    <string name="identity_card" translatable="false">Identity Card</string>
    <string name="account_number" translatable="false">Account Number</string>
    <string name="bank_name" translatable="false">Bank Name</string>
    <string name="no_traveller_found" translatable="false">No Traveller Found</string>
    <string name="select_coutry" translatable="false">Select Country</string>
    <string name="add_bank_information" translatable="false">Add Bank Information</string>
    <string name="update_profile" translatable="false">Update Profile</string>
    <string name="update_details" translatable="false">Update Details</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="add_details" translatable="false">Add Details</string>
    <string name="enter_email" translatable="false">Enter Email</string>
    <string name="enter_name" translatable="false">Enter Name</string>
    <string name="select_image" translatable="false">Please Select Image Aleaste One Image</string>
    <string name="accept_term_and_condition" translatable="false">Please Accept Terms And Condition</string>
    <string name="quntity_error" translatable="false">Please Enter Quantity</string>
    <string name="enter_mobile" translatable="false">Enter Mobile</string>
    <string name="no_of_order_available_in_order" translatable="false">No. of products available in orders:</string>
    <string name="total_order_price" translatable="false">Total Product Price: $</string>
    <string name="do_you_want_to_accept_this_order" translatable="false">Do you want to accept this order?</string>
    <string name="please_complete_the_details_of_your_trip" translatable="false">Please Complete the details of your trip</string>
    <string name="i_bring_the_product_of" translatable="false">I bring the product of</string>
    <string name="i_deliver_it_in" translatable="false">I deliver it in</string>
    <string name="your_reward" translatable="false">Your Reward $</string>
    <string name="client_id" translatable="false">964241717711116</string>
    <string name="callback_url" translatable="false">https://instagram.com/</string>
    <string name="base_url" translatable="false">https://api.instagram.com/</string>
    <string name="get_user_info_url" translatable="false">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="redirect_url" translatable="false">https://www.google.com/</string>
    <string-array name="qut">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="toshopper">TO SHOPPER</string>
    <string name="totraveller">TO TRAVELLER</string>
    <string name="Home">Home</string>
    <string name="MyOrders">My Orders</string>
    <string name="MyOffers">My Offers</string>
    <string name="Messages">Messages</string>
    <string name="More">More</string>
    <string name="changepwd">Change Password</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="enter_old_passowrd">Enter Old Password*</string>
    <string name="enter_new_password">Enter New Password*</string>
    <string name="confirm_pass" >Confirm Password*</string>
    <string name="submit">Submit</string>
    <string name="tagline">Enjoy shopping, win travelling</string>
    <string name="forgotpwd">Forgot Password</string>
    <string name="forgotp">Forgot Password?</string>
    <string name="email_address" >Email Address*</string>
    <string name="password">Password*</string>
    <string name="sing_in" >Sign In</string>
    <string name="sing_up">Don\'t have account? Sign Up</string>
    <string name="Offers">Offers</string>
    <string name="activeorder">active order</string>
    <string name="txt_travel_from">Travel From</string>
    <string name="txt_travel_to">Travel To</string>
    <string name="Configuration">Configuration</string>
    <string name="Subject">Subject</string>
    <string name="SelectYourReason">Select Your Reason</string>
    <string name="Description">Description</string>
    <string name="EnterDescription">Enter Description</string>
    <string name="Send">Send</string>
    <string name="Aboutbuyertraveller">About buyer / traveller</string>
    <string name="Aboutpayment">About payment</string>
    <string name="Regarding">Regarding the web or the app</string>
    <string name="Comments">Comments and suggestions</string>
    <string name="functionality">About functionality</string>
    <string name="Others">Others</string>
    <string name="Entersubject">Enter subject</string>
    <string name="Enterdescription">Enter description</string>
    <string name="Enterreason">Enter reason</string>
    <string name="slelect_travel_from_city">Select Travel From City</string>
    <string name="select_travel_to_city">Select Trip To City</string>
    <string name="select_date">Select Date</string>
    <string name="Cancel">Cancel</string>
    <string name="travel_date" >Travel Date</string>
    <string name="EditTravel">Edit Travel</string>
    <string name="Update">Update</string>
    <string name="following">Following</string>
    <string name="buying">BUYING FOR THE WORLD</string>
    <string name="product_detail">Product Detail</string>
    <string name="delivery_detail">Delivery Detail</string>
    <string name="product_overview">Product Overview</string>
    <string name="summery">Summary</string>
    <string name="article_came_from">Where do you want the article to come from?</string>
    <string name="location">Location for the  delivery of the article</string>
    <string name="dead_line">Deadline for the delivery of the article</string>
    <string name="reward">What reward do you offer the traveler?(USD)</string>
    <string name="eg_came_from">eg.Ecuador</string>
    <string name="eg_location">eg.London</string>
    <string name="eg_date">eg: 13/03/2021</string>
    <string name="rtn">Return</string>
</resources>