<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/add_product"
    tools:context=".Fragment.ShopperNewOrder.ShopperDeliveryFragment">

    <RelativeLayout
        android:id="@+id/toolBarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header"
        android:background="@drawable/gradient_background">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imgBack"
            android:visibility="visible"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:layout_gravity="start"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_left_black_24dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/buying"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:id="@+id/txtOrder"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBarRl">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:background="#80000000">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/two"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/productdetailsTxt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/product_detail"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_marginLeft="30dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="right"
                        android:text="@string/delivery_detail"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"

                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/product_overview"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/summery"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txt"
                android:layout_marginTop="30dp"
                android:text="@string/article_came_from"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eg_came_from"
                android:padding="7dp"
                android:id="@+id/txtArticleCame"
                style="@style/editText2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txt"
                android:layout_marginTop="10dp"
                android:text="@string/location"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eg_location"
                style="@style/editText2"
                android:padding="7dp"
                android:id="@+id/txtArticleDeliver"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginLeft="10dp"

                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txt"

                android:layout_marginTop="10dp"
                android:text="@string/dead_line"/>

            <LinearLayout
                android:id="@+id/selectDateLL"
                android:clickable="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:background="@drawable/background_shopper">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/eg_date"
                    android:textColorHint="@color/lite_white"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:id="@+id/txtDate"
                    android:drawableRight="@drawable/ic_event_black_24dp"
                    android:textColor="@color/white"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reward"
                style="@style/txt"
                android:layout_margin="10dp"/>
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:background="@drawable/background_shopper"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="$"
                    android:gravity="center"
                    android:textColor="@color/white"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:id="@+id/edtReward"
                    android:imeOptions="actionDone"
                    android:maxLength="12"

                    android:background="@null"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rtn"
                        android:id="@+id/btnReturn"
                        style="@style/button"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:id="@+id/btnFollowing"
                        style="@style/button"/>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>

</layout>